# numpy-string-indexed

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
docs/: basic.rst  compute.rst  format.rst  guide.rst  index.rst  operations.rst  rough.html  rough.md
src/friendly_matrix/: compute_matrix.py  constants.py  formatting.py  friendly_matrix.py  methods.py  operations.py
src/numpy_string_indexed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: friendly_formatted.txt  tests.py
