[metadata]
name = numpy-string-indexed
version = 0.0.1
author = Aitan Grossman
author_email = aitan.gros@gmail.com
description = A NumPy extension that allows arrays to be indexed using labels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AitanG/numpy-string-indexed
project_urls =
    Bug Tracker = https://github.com/AitanG/numpy-string-indexed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src